--- a/data_engineering/hive/docker-compose.yaml
+++ b/data_engineering/hive/docker-compose.yaml
@@ -30,13 +30,13 @@ services:
       - hive-net
     entrypoint: >
       bash -c "
-        echo '⏳ Waiting for HiveServer2 to be ready...';
+        echo 'Waiting for HiveServer2 to be ready...';
         sleep 30;
 
-        echo '🚀 Running init.hql...';
+        echo 'Running init.hql...';
         beeline -u jdbc:hive2://hive-server:10000/default -n hive -f /init/init.hql;
 
-        echo '✅ Done loading data.'
+        echo 'Done loading data.'
       "
 
 
